# last-epoch-build-as-plaintext

./: .gitignore  Cargo.toml  README.md  inspect_json.py  intended_item_info.md
.github/: copilot-instructions.md
src/: lib.rs  main.rs
src/sub_logic/: idols_scraper.rs  mod.rs  resolver.rs
