[package]
name = "letools_scraper"
default-run = "letools_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
headless_chrome = "1.0"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
arboard = "3.6.1"
